// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton snapshots checked = false, disabled = false, state = danger 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "opacity": 1,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "opacity": 1,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#db3424",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#db3424",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 0,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 0,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = false, disabled = false, state = default 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#cecfd2",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 0,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 0,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = false, disabled = true, state = default 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "opacity": 0,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "opacity": 0,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#e2e2e4",
        "borderColor": "#cecfd2",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "opacity": 0.6,
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#e2e2e4",
          "borderColor": "#cecfd2",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "opacity": 0.6,
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 0,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 0,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = false, state = danger 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "opacity": 1,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "opacity": 1,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#2b2e33",
        "borderColor": "#2b2e33",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 1,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 1,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = false, state = default 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#2b2e33",
        "borderColor": "#2b2e33",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 1,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 1,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = true, state = default 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "opacity": 0,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "opacity": 0,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#2b2e33",
        "borderColor": "#2b2e33",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "opacity": 0.6,
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "opacity": 0.6,
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 1,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 1,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots default 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 100,
        "height": 28,
        "left": -3.5,
        "position": "absolute",
        "top": -3.5,
        "transitionDuration": 100,
        "transitionProperty": "opacity",
        "width": 28,
      }
    }
    pointerEvents="none"
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 100,
          "height": 28,
          "left": -3.5,
          "position": "absolute",
          "top": -3.5,
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#cecfd2",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "justifyContent": "center",
        "transitionDuration": 100,
        "transitionProperty": [
          "borderColor",
          "backgroundColor",
        ],
        "width": 21,
      }
    }
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "justifyContent": "center",
          "width": 21,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 100,
          "height": 10.5,
          "opacity": 0,
          "transitionDuration": 100,
          "transitionProperty": [
            "opacity",
          ],
          "width": 10.5,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 10.5,
            "opacity": 0,
            "width": 10.5,
          },
        ]
      }
    />
  </View>
</View>
`;
